--- a/source/CSharpCollection/1.X/index.html
+++ b/source/CSharpCollection/1.X/index.html
@@ -7,7 +7,9 @@ layout: default
 <p>This directory contains the source code for all 1.X releases of the CSharpCollection</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
-{% for item in site.data.csharpcollectionv1 %}
-  <h4>{{ item.date }} - v1.{{ item.name }} - <a href="/source/CSharpCollection/1.X/CSharpCollection-v1.{{ item.name }}-source.zip">CSharpCollection-v1.{{ item.name }}-source.zip</a> | <a href="/source/CSharpCollection/1.X/CSharpCollection-v1.{{ item.name }}-bin.zip">Binaries</a> (Released as v1.{{ item.name }})</h4>
-  <hr>
+{% for item in site.data.csharpcollection %}
+  {% if item.major == 1 %}
+    <h4>{{ item.date }} - v1.{{ item.minor }} - <a href="/source/CSharpCollection/1.X/CSharpCollection-v1.{{ item.minor }}-source.zip">CSharpCollection-v1.{{ item.minor }}-source.zip</a> | <a href="/source/CSharpCollection/1.X/CSharpCollection-v1.{{ item.minor }}-bin.zip">Binaries</a> (Released as v1.{{ item.minor }})</h4>
+    <hr>
+  {% endif %}
 {% endfor %}
