--- a/source/NCX-Core/2.X/index.html
+++ b/source/NCX-Core/2.X/index.html
@@ -8,7 +8,9 @@ layout: default
 <p>NCX-Core only compiles for Windows</p>
 <p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
-{% for item in site.data.ncxcorev2 %}
-  <h4>{{ item.date }} - v2.{{ item.name }} - <a href="/source/NCX-Core/2.X/NCX-Core-v2.{{ item.name }}-source.zip">NCX-Core-v2.{{ item.name }}-source.zip</a> | <a href="/source/NCX-Core/2.X/NCX-Core-v2.{{ item.name }}-setup.zip">Binaries</a> (Released as v2.{{ item.name }})</h4>
-  <hr>
+{% for item in site.data.ncxcore %}
+  {% if item.major == 2 %}
+    <h4>{{ item.date }} - v2.{{ item.minor }} - <a href="/source/NCX-Core/2.X/NCX-Core-v2.{{ item.minor }}-source.zip">NCX-Core-v2.{{ item.minor }}-source.zip</a> | <a href="/source/NCX-Core/2.X/NCX-Core-v2.{{ item.minor }}-setup.zip">Binaries</a> (Released as v2.{{ item.minor }})</h4>
+    <hr>
+  {% endif %}
 {% endfor %}
